[gd_scene load_steps=9 format=2]

[ext_resource path="res://GFX/GUI/Life-Bar.png" type="Texture" id=1]
[ext_resource path="res://GFX/GUI/Oxygen-Bar.png" type="Texture" id=2]
[ext_resource path="res://GFX/GUI/Jetpack-Bar.png" type="Texture" id=3]
[ext_resource path="res://GFX/GUI/BG-Bar.png" type="Texture" id=4]
[ext_resource path="res://GUI/GUI.gd" type="Script" id=5]
[ext_resource path="res://GFX/GUI/GreenSignal.png" type="Texture" id=6]
[ext_resource path="res://GFX/GUI/RedSignal.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "ready",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "reload",
"speed": 5.0
} ]

[node name="GUI" type="CanvasLayer" groups=["GUI"]]
script = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="Control"]
margin_left = 25.0
margin_top = 25.0
margin_right = 40.0
margin_bottom = 40.0
custom_constants/vseparation = 5
custom_constants/hseparation = 10
columns = 2

[node name="LblOxygen" type="Label" parent="Control/GridContainer"]
margin_right = 91.0
margin_bottom = 14.0
text = "Oxygen"

[node name="OxygenBar" type="TextureProgress" parent="Control/GridContainer"]
margin_left = 101.0
margin_right = 229.0
margin_bottom = 14.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 2 )

[node name="LblHealth" type="Label" parent="Control/GridContainer"]
margin_top = 19.0
margin_right = 91.0
margin_bottom = 33.0
text = "Life"

[node name="HealthBar" type="TextureProgress" parent="Control/GridContainer"]
margin_left = 101.0
margin_top = 19.0
margin_right = 229.0
margin_bottom = 33.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 1 )

[node name="LblJetpack" type="Label" parent="Control/GridContainer"]
margin_top = 38.0
margin_right = 91.0
margin_bottom = 52.0
text = "Jetpack Energy"

[node name="JetpackBar" type="TextureProgress" parent="Control/GridContainer"]
margin_left = 101.0
margin_top = 38.0
margin_right = 229.0
margin_bottom = 52.0
max_value = 50.0
value = 20.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )

[node name="LeftBottom" type="Control" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = -25.0

[node name="LblGunReady" type="Label" parent="Control/LeftBottom"]
margin_right = 69.0
margin_bottom = 14.0
text = "Gun ready:"

[node name="WeaponStatusLight" type="AnimatedSprite" parent="Control/LeftBottom"]
position = Vector2( 87, 5 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "reload"
